# hasql-transaction

./: .gitignore  .travis.yml  CHANGELOG.md  hasql-transaction.cabal  hasql-tx.cabal  stack.yaml
.github/workflows/: check.yaml  on-push-to-master-or-pr.yaml  on-push-to-release.yaml
conflicts-test/: Main.hs
conflicts-test/Main/: Queries.hs  Statements.hs  Transactions.hs
demo/: Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.12.2/: hasql-transaction-1.2.1-inplace.conf  package.cache
src/conflicts-test/: Main.hs
