name:
  hasql-transaction
version:
  0.3
category:
  Hasql, Database, PostgreSQL
synopsis:
homepage:
  https://github.com/nikita-volkov/hasql-transaction 
bug-reports:
  https://github.com/nikita-volkov/hasql-transaction/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-transaction.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Transaction.Prelude
    Hasql.Transaction.Queries
  exposed-modules:
    Hasql.Transaction
  build-depends:
    hasql >= 0.13 && < 0.15,
    -- parsing:
    attoparsec >= 0.10 && < 0.14,
    -- database:
    postgresql-error-codes >= 1 && < 2,
    -- data:
    bytestring-tree-builder >= 0.1 && < 0.2,
    vector >= 0.10 && < 0.12,
    text >= 1 && < 1.3,
    bytestring >= 0.10 && < 0.11,
    -- control:
    contravariant >= 1.3 && < 2,
    contravariant-extras >= 0.3 && < 0.4,
    either >= 4.4.1 && < 5,
    transformers >= 0.3 && < 0.5,
    -- errors:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    base-prelude >= 0.1.19 && < 0.2
