name:
  hasql-tx
version:
  1
category:
  Hasql, Database, PostgreSQL
synopsis:
homepage:
  https://github.com/nikita-volkov/hasql-tx 
bug-reports:
  https://github.com/nikita-volkov/hasql-tx/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2015, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/hasql-tx.git


library
  hs-source-dirs:
    library
  ghc-options:
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Hasql.Tx.Prelude
    Hasql.Tx.Queries
  exposed-modules:
    Hasql.Tx
  build-depends:
    hasql >= 1 && < 1.1,
    -- parsing:
    attoparsec >= 0.10 && < 0.14,
    -- database:
    postgresql-error-codes >= 1 && < 2,
    postgresql-binary == 0.5.*,
    postgresql-libpq == 0.9.*,
    -- data:
    aeson >= 0.7 && < 0.11,
    uuid == 1.3.*,
    vector >= 0.10 && < 0.12,
    time >= 1.4 && < 1.6,
    hashtables >= 1.1 && < 1.3,
    scientific >= 0.2 && < 0.4,
    text >= 1 && < 1.3,
    bytestring >= 0.10 && < 0.11,
    hashable >= 1.2 && < 1.3,
    -- control:
    contravariant >= 1.3 && < 2,
    either >= 4.4.1 && < 5,
    transformers >= 0.3 && < 0.5,
    -- errors:
    loch-th == 0.2.*,
    placeholders == 0.1.*,
    -- general:
    base-prelude >= 0.1.19 && < 0.2


executable demo
  hs-source-dirs:
    demo
  main-is:
    Main.hs
  ghc-options:
    -threaded
    "-with-rtsopts=-N"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    contravariant,
    hasql-tx,
    text,
    bytestring,
    base-prelude
